--- a/css/oslohavn1798.css
+++ b/css/oslohavn1798.css
@@ -61,6 +61,15 @@ a:hover {
 	vertical-align:middle;
 }
 
+#logo-app {
+	position:absolute;
+	left:20px;
+	top:20px;
+	width:300px;
+	z-index:100;
+	overflow:visible;
+}
+
 @media only screen and (min-width: 830px) {
 
 
