--- a/css/oslohavn1798.css
+++ b/css/oslohavn1798.css
@@ -24,15 +24,6 @@ img {
 	font-family: 'EB Garamond', serif;
 }
 
-a {
-	color:#f1a664;
-	text-decoration: none;
-}
-
-a:hover {
-	color:white;
-}
-
 ::-moz-selection { /* Code for Firefox */
     color: #ee984d;
 	background: #e48736; 
@@ -43,6 +34,100 @@ a:hover {
 	background: #e48736; 
 }
 
+a {
+	color:#f1a664;
+	text-decoration: none;
+	transition: color 0.3s ease;
+}
+
+a:hover {
+	color:white;
+}
+
+/* Startside */
+
+	/* navigation */
+
+header {
+	position:relative;
+	background:red;
+}
+
+.site-nav {
+	position:absolute;
+	background:rgb(241, 239, 236);
+	width:260px;
+	height:100vh;
+	top:100%;
+	right:-260px;
+	overflow: hidden;
+	z-index:3000;
+}
+
+.site-nav ul {
+	list-style:none;
+	text-align:left;
+	margin-top:100px;
+}
+
+.site-nav a {
+	display:block;
+	padding:15px 30px;
+	font-size:2.0rem;
+}
+
+.site-nav a:hover,
+.site-nav a:focus {
+	background:#f1a664;
+}
+
+.site-nav--open {
+	right:0px;
+}
+
+.menu-toggle {
+	padding: 10px 7px;
+	position: absolute;
+	top: 12px;
+	right: 12px;
+	cursor: pointer;
+	z-index:4000;
+}
+
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+	content: '';
+	display: block;
+	background: black;
+	height: 3px;
+	width: 20px;
+	border-radius: 3px;
+	transition: all ease-in-out 500ms;
+}
+
+.hamburger::before {
+	transform: translateY(-6px);
+}
+
+.hamburger::after {
+	transform: translateY(3px);
+}
+
+.open .hamburger {
+	transform: rotate(45deg);
+}
+
+.open .hamburger::after {
+	transform: translateY(-3px) rotate(-90deg);
+}
+
+.open .hamburger::before {
+	opacity:0;
+}
+
+	/*logoer*/
+
 #partnere {
 	width:100%;
 	height:auto;
@@ -52,7 +137,7 @@ a:hover {
 }
 
 #partnere img {
-	width:7.5%;
+	width:7.2%;
 	height:auto;
 	max-height:50px;
 	min-width:30px;
@@ -60,6 +145,8 @@ a:hover {
 	margin-right:5px;
 	vertical-align:middle;
 }
+
+/* app-side */
 
 #logo-app {
 	position:absolute;
@@ -72,6 +159,33 @@ a:hover {
 
 @media only screen and (min-width: 830px) {
 
+.fade-up {
+	mix-blend-mode: hard-light;
+}
+
+.fade-up::after {
+	position: fixed;
+	content: "";
+	left: 40%;
+	/*top:430px;*/
+	height: 32.5px;
+	width: 500px;
+	top:60vh;
+	background: url(../img/bottom-fade.png) bottom center no-repeat;
+	/*background: linear-gradient(rgba(0,0,0,0), rgba(128,128,128,100));*/
+	/*background:-webkit-gradient(linear, left 90%, left bottom, from(rgba(0,0,0,0)), to(rgba(255,255,255,100)));*/
+	transform: translateY(100%);
+}
+
+	/*-webkit-mask-image: 
+-webkit-gradient(linear, left 90%, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));*/
+
+
+#cover-text {
+	height:60vh;
+}
+
+/*#cover-text a:hover {color:#ec984e;}*/
 
 #partnere img:nth-child(1) {
     margin-right:10px;
@@ -93,6 +207,13 @@ a:hover {
 
 #partnere img:nth-child(11) {
 	margin-left:-5px;
+	width:7%;
+	max-height:35px;
+}
+
+#partnere img:nth-child(12) {
+	margin-left:-15px;
+	margin-right:-15px;
 	width:7%;
 	max-height:35px;
 }
@@ -128,15 +249,18 @@ button {
 	background-color: #73abe0; /*#96368b;*/
 	background-blend-mode: multiply;
 	text-align:center;
-    overflow-y: scroll;
+	overflow-y: scroll;
+	overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
 }
 
 #cover-text {
-	position:relative;
+	position:absolute;
 	text-align:left;
 	width:500px;
+	overflow:scroll;
 	top:65px;
+	/*top:10vh;*/
 	left:40%;
 }
 
@@ -154,7 +278,7 @@ button {
 }
 
 #app-button {
-	width:200px;
+	width:230px;
 	height:60px;
 	text-align:center;	
 	margin-top:60px;
@@ -167,6 +291,7 @@ button {
 	font-size:2.0rem;
 	color:white;
 	outline:none;
+	cursor: pointer;
 }
 
 #app-button:hover {
@@ -201,11 +326,22 @@ button {
 	color:black;
 }
 
+
 @media only screen and (max-width: 830px) {
-    
 	
+
+	.site-nav--open {
+		width:100%;
+	}
+
+	.site-nav ul {
+		text-align:center;
+	}
+
 	#logo-box {
 		text-align:center;
+		width:100%;
+		float:left;
 	}
 	
 	#logo {
@@ -222,18 +358,26 @@ button {
 		margin-bottom:60px;
 		margin-top:20px;
 		color:white;
+		position:relative;
 	}
-	
+
+	#cover-text {
+	text-align: center;
+	}
+
 	#cover-text p {
 		font-size:1.8rem;
+		text-align:left;
 	}
 	
 	#cover-text h1 {
 		font-size:3.2rem;
+		text-align:left;
 	}
 	
 	#partnere {
 		position:relative;
+		margin-top:50px;
 	}
 	
 	#partnere img {
@@ -262,4 +406,3 @@ button {
 	
 	
 }
-
