--- a/css/oslohavn1798.css
+++ b/css/oslohavn1798.css
@@ -160,21 +160,23 @@ header {
 @media only screen and (min-width: 830px) {
 
 .fade-up {
-	mix-blend-mode: hard-light;
+	/*mix-blend-mode: hard-light;*/
+	-webkit-mask-image: linear-gradient(to bottom, white 85%, transparent);
+	mask-image: linear-gradient(to bottom, white 85%, transparent);
 }
 
-.fade-up::after {
+/*.fade-up::after {
 	position: fixed;
 	content: "";
 	left: 40%;
 	/*top:430px;*/
-	height: 32.5px;
+	/*height: 32.5px;
 	width: 500px;
 	top:60vh;
 	background: url(../img/bottom-fade.png) bottom center no-repeat;
 	/*background: linear-gradient(rgba(0,0,0,0), rgba(128,128,128,100));*/
 	/*background:-webkit-gradient(linear, left 90%, left bottom, from(rgba(0,0,0,0)), to(rgba(255,255,255,100)));*/
-	transform: translateY(100%);
+	/*transform: translateY(100%);
 }
 
 	/*-webkit-mask-image: 
@@ -281,7 +283,7 @@ button {
 	width:230px;
 	height:60px;
 	text-align:center;	
-	margin-top:60px;
+	margin-top:35px;
 	z-index:200;
 	background-color: transparent !important;
 	border:2px solid white;
