--- a/css/oslohavn1798.css
+++ b/css/oslohavn1798.css
@@ -37,7 +37,7 @@ img {
 a {
 	color:#f1a664;
 	text-decoration: none;
-	transition: color 0.3s ease;
+	transition: color 0.3s ease-in-out;
 }
 
 a:hover {
@@ -50,7 +50,6 @@ a:hover {
 
 header {
 	position:relative;
-	background:red;
 }
 
 .site-nav {
@@ -127,6 +126,21 @@ header {
 }
 
 	/*logoer*/
+
+.tidvis-logo {
+	position:absolute;
+	width: 50px;
+	top:11px;
+	right:60px;
+	fill:black;
+	cursor: pointer;
+}
+
+.tidvis-logo:hover path {
+	fill:black;
+	transition: fill ease-in-out .3s ;
+}
+
 
 #partnere {
 	width:100%;
@@ -331,6 +345,27 @@ button {
 
 @media only screen and (max-width: 830px) {
 	
+	header {
+		position: relative;
+		width:100%;
+		text-align: left;
+
+	}
+
+	.tidvis-logo {
+		position:relative;
+		left:15px;
+		right:0px;
+	}
+
+	/*position:absolute;
+	width: 50px;
+	top:12px;
+	right:60px;*/
+
+	.site-nav {
+		top:0%;
+	}
 
 	.site-nav--open {
 		width:100%;
@@ -341,13 +376,12 @@ button {
 	}
 
 	#logo-box {
-		text-align:center;
-		width:100%;
-		float:left;
+		position: relative;
+		margin-left:auto;
+		margin-right:auto;
 	}
 	
 	#logo {
-		display:inline-block;
 		left:0px;
 		position:relative;
 	}
