--- a/css/oslohavn1798.css
+++ b/css/oslohavn1798.css
@@ -60,19 +60,21 @@ header {
 	top:100%;
 	right:-260px;
 	overflow: hidden;
-	z-index:3000;
+	z-index:5000;
 }
 
 .site-nav ul {
 	list-style:none;
 	text-align:left;
-	margin-top:100px;
+	margin-top:70px;
 }
 
 .site-nav a {
 	display:block;
 	padding:15px 30px;
 	font-size:2.0rem;
+	-webkit-tap-highlight-color:rgba(0, 0, 0, 0);
+
 }
 
 .site-nav a:hover,
@@ -90,7 +92,7 @@ header {
 	top: 12px;
 	right: 12px;
 	cursor: pointer;
-	z-index:4000;
+	z-index:6000;
 }
 
 .hamburger,
@@ -125,6 +127,69 @@ header {
 	opacity:0;
 }
 
+#language-menu {
+	display:none;
+	position:absolute;
+	width:80px;
+	top:80px;
+	right:15px;
+	overflow:hidden;
+	z-index:3600;
+}
+
+#language-menu ul {
+	list-style: none;
+	text-align: left;
+}
+
+#language-menu a {
+	display:block;
+	padding:2px 10px;
+	font-size:1.3rem;
+	color:black;
+	-webkit-tap-highlight-color:rgba(0, 0, 0, 0);
+}
+
+#language-menu a:hover {
+	color:white;
+}
+
+.language-menu-toggle {
+	padding: 5px 7px;
+	font-size:1.3rem;
+	position: absolute;
+	width:100px;
+	height:30px;
+	text-align:left;
+	top: 50px;
+	right: 15px;
+	cursor: pointer;
+	z-index:2000;
+}
+
+.language-menu-toggle p {
+	font-weight: bold;
+	float:left;
+}
+
+.language-menu-toggle::before {
+	content:'';
+	display:inline-block;
+	margin:5px 7px;
+	width: 0; 
+	height: 0; 
+	border-top: 5px solid transparent;
+	border-bottom: 5px solid transparent;
+	
+	border-left: 5px solid black;
+	cursor: pointer;
+	transition: all ease-in-out 500ms;
+}
+
+.open.language-menu-toggle::before{
+	transform: rotate(90deg);
+}
+
 	/*logoer*/
 
 .tidvis-logo {
@@ -132,7 +197,6 @@ header {
 	width: 50px;
 	top:11px;
 	right:60px;
-	fill:black;
 	cursor: pointer;
 }
 
@@ -349,13 +413,47 @@ button {
 		position: relative;
 		width:100%;
 		text-align: left;
-
+		padding-bottom:20px;
+		background-color:white;
 	}
 
 	.tidvis-logo {
 		position:relative;
 		left:15px;
 		right:0px;
+	}
+
+	.tidvis-logo path {
+		fill:black;
+	}
+
+	#language-menu, .language-menu-toggle {
+		left:100px;
+		right:0;
+		padding:0px;
+		top:9px;
+		width:120px;
+	}
+
+	#language-menu {
+		position:relative;
+		left:110px;
+	}
+
+	.language-menu-toggle {
+		font-size:1.8rem;
+	}
+
+	#language-menu a {
+		font-size:1.8rem;
+		line-height:3.0rem;
+	}
+
+	.language-menu-toggle::before {
+		margin:7px 9px;
+		border-top: 6px solid transparent;
+		border-bottom: 6px solid transparent;
+		border-left: 6px solid black;
 	}
 
 	/*position:absolute;
@@ -373,6 +471,11 @@ button {
 
 	.site-nav ul {
 		text-align:center;
+	}
+
+	.site-nav a {
+		font-size:2.8rem;
+		line-height: 2.0em;
 	}
 
 	#logo-box {
