--- a/css/oslohavn1798.css
+++ b/css/oslohavn1798.css
@@ -129,28 +129,31 @@ header {
 
 #language-bar { 
     position:absolute;
-    border:1px solid white;
-    height: 3px;
-    width: 20px;
-    transition: all ease-in-out 500ms;
+    top:15px;
+    right:130px;
+    width:auto;
 }
 
-#language-bar ul {
+svg.uk-flag {
+    margin-right:7px;
+}
+
+svg.norway-flag, svg.uk-flag {
+    height:12px;
+    width:auto;
+    cursor: pointer;
+    float:right;
+}
+
+.norway-flag:hover path, .uk-flag:hover path{
+    fill: white;
+    transition: fill ease-in-out .3s ;
+
+}
+
+/*#language-bar ul {
     list-style: none;
-}
-
-.norway-flag, .uk-flag {
-    width:10px;  
-    height:auto;  
-}
-
-.norway-flag {
-    background-image: url(../img/no.svg);
-}
-
-.uk-flag {
-    background-image: url(../img/gb.svg);
-}
+}*/
 
 /*
 #language-menu {
@@ -230,12 +233,6 @@ header {
 .tidvis-logo path {
     fill:black;
 }
-
-.tidvis-logo:hover path {
-    fill:white;
-    transition: fill ease-in-out .3s ;
-}
-
 
 #partnere {
     width:100%;
@@ -515,14 +512,14 @@ header {
 }
 
 #cover-container {
-    background-image: url("../img/cover_bw.jpg");
+    background-image: url("../img/cover_blue.jpg");
     height:100%;
     position:relative;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-color: #73abe0; /*#96368b;*/
-    background-blend-mode: multiply;    
+    /*background-blend-mode: multiply;   */
     text-align:center;
     overflow-y: auto;
     overflow-x: hidden;
@@ -542,7 +539,6 @@ header {
     overflow-x:hidden; 
     top:65px;
     left:40%;
-    -webkit-overflow-scrolling: touch;
 }
 
 #cover-text p {
@@ -564,7 +560,6 @@ header {
     height:60px;
     text-align:center;	
     margin-top:35px;
-    z-index:2000;
     background-color: transparent !important;
     border:2px solid white;
     border-radius: 10px;
@@ -636,12 +631,18 @@ header {
 }
 
 #toggleWatchBtn {
-    width:100%;
-    height:100%;
-    text-align:center;	
+    width:auto;
+    height:40px;
+    padding:8px;
+    position:fixed;
+    text-align:center;
+    margin-left:50%;
+    margin-right:auto;	
+    transform: translate(-50%, 0);
+    bottom:20px;
     background-color: #4f8bc6 !important;
     background-image:linear-gradient(to bottom,#5494d3, #39648f);
-    border:none;
+    border:2px solid white;
     border-radius: 10px;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
@@ -656,12 +657,26 @@ header {
 #toggleWatchBtn:hover, #toggleWatchBtn:focus {
     background-color: white !important;
     background-image:none;
-    border:#73abe0;
+    border:2px solid black;
 }
 
 /*mobile*/
 
-@media only screen and (max-width: 830px) {
+@media only screen and (min-width: 630px) and (max-width: 830px) {
+    #logo {
+        width:200px;
+        top: 38px;
+        left:25px;
+    }
+
+    #cover-text {
+        width: 400px;
+        left:36%;
+    }
+
+}
+
+@media only screen and (max-width: 630px) {
     
     header {
         position: relative;
@@ -676,40 +691,6 @@ header {
         left:15px;
         right:0px;
     }
-
-    /*#language-menu, .language-menu-toggle {
-        left:100px;
-        right:0;
-        padding:0px;
-        top:9px;
-        width:120px;
-    }
-
-    #language-menu {
-        position:relative;
-        left:110px;
-    }
-
-    .language-menu-toggle {
-        font-size:1.8rem;
-    }
-
-    #language-menu a {
-        font-size:1.8rem;
-        line-height:3.0rem;
-    }
-
-    .language-menu-toggle::before {
-        margin:7px 9px;
-        border-top: 6px solid transparent;
-        border-bottom: 6px solid transparent;
-        border-left: 6px solid black;
-    }*/
-
-    /*position:absolute;
-    width: 50px;
-    top:12px;
-    right:60px;*/
 
     .site-nav {
         top:0%;
@@ -740,7 +721,7 @@ header {
     }
     
     #cover-text {
-        width:70%;
+        width:80%;
         height:auto;
         display:inline-block;
         left:0%;
@@ -791,7 +772,12 @@ header {
         display:none;
     }
 
-    .modal-content {
+    #language-bar { 
+        top:16px;
+        right:70px;
+    }
+
+   /* .modal-content {
         transform: rotate(0deg);
         width:90%;
         height:auto;
@@ -828,18 +814,18 @@ header {
     .close {
         right:15px;
         top:15px;
-    }
+    }*/
     
     /* Add Animation */
-@keyframes animatetop {
+/*@keyframes animatetop {
     from {top: -300px; opacity: 0}
     to {top: 20px; opacity: 1}
-}
+}*/
 
 }
 
 
-@media only screen and (min-width: 830px) {
+@media only screen and (min-width: 630px) {
 
 .fade-up {
     /*mix-blend-mode: hard-light;*/
@@ -866,16 +852,21 @@ header {
 }
 
 #partnere img:nth-child(11) {
-    margin-left:-5px;
-    width:7%;
+    margin-left:-2px;
+    width:4%;
     max-height:35px;
 }
 
 #partnere img:nth-child(12) {
-    margin-left:-15px;
+    margin-left:-5px;
     margin-right:-15px;
-    width:7%;
+    width:5%;
     max-height:35px;
+}
+
+.tidvis-logo:hover path {
+    fill:white;
+    transition: fill ease-in-out .3s ;
 }
 
 }
@@ -883,55 +874,30 @@ header {
 
 /*iframes*/
 .gm-style-iw {
-	/*width: 100% !important;*/
 	top: 15px !important;
-    /*left: 5px !important;*/
 	background-color:#4f8bc6;
-	box-shadow: 0 0px 6px rgba(0, 0, 0, 0.6);
-    /*border: 1px solid rgba(72, 181, 233, 0.6);*/
+	box-shadow: 0 0px 6px rgba(0, 0, 0, 0.5);
     text-align:center;
     padding-top:10px;
 	border-radius: 10px 10px 10px 10px;
 }
-/*#iw-container {
-	margin-bottom: 10px;
-}*/
+
 .iw-title {
-    font-size: 2.0rem;
+    font-size: 1.6rem;
+    letter-spacing: 0.04rem;
     padding:5px;
+    padding-bottom:7px;
     color: white;
-    border:1px solid red;
 }
 
 #iw-container {
-    /*padding: 10px;*/
     margin: 0px !important;
     padding:0px !important;
-    border:1px solid green;
-    /*border-radius: 2px 2px 0 0;*/
-    	/*margin-right: 1px;*/
-	/*padding: 15px 5px 20px 15px;*/
     overflow-x: hidden;
-}
-
-.iw-content {
-    border:1px solid yellow;
 }
 
 iframe {
     padding:0px !important;
     margin:0px !important;
     max-width:100% !important;
-    border:1px solid white;
 }
-/*.iw-bottom-gradient {
-	position: absolute;
-	width: 326px;
-	height: 25px;
-	bottom: 10px;
-	right: 18px;
-	background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
-	background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
-	background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
-	background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
-}*/
