--- a/css/oslohavn1798.css
+++ b/css/oslohavn1798.css
@@ -582,16 +582,51 @@ svg.norway-flag, svg.uk-flag {
     height:40px;
     position:fixed;
     margin-left:auto;
-    margin-right: auto;
+    margin-right:auto;
     left:0;
     right:0;
-    bottom:20px;
+    bottom:30px;
     z-index: 8000;
+}
+
+/*Toggle overlay button*/
+
+#ToggleOverlayBtn {
+    border:none;
+    position:relative;
+    transform: translateY(-100%) translateX(150px);
+    z-index:7000;
+    cursor: pointer;
+    background-color: white !important;
+    border-radius: 20px;
+    width:32px;
+    height:32x;
+    left:10px;
+    bottom:4px;
+    outline:none;
+    line-height: 0;
+    -webkit-transition-duration: 0.2s; /* Safari */
+    transition-duration: 0.2s;
+    transition: all ease-in-out .2s ;
+}
+
+#ToggleOverlayBtn:hover  {
+    background-color: #4F8BC6 !important;
+}
+
+#ToggleOverlayBtn svg {
+    position:relative;
+    width: 32px;
+    max-height:32px;
+}
+
+#ToggleOverlayBtn svg path {
+    fill:black;
 }
 
 /* Modal button */
 
-#myBtn {
+/*#myBtn {
     border:none;
     position:relative;
     transform: translateY(-100%) translateX(-100%);
@@ -628,25 +663,25 @@ svg.norway-flag, svg.uk-flag {
 #myBtn svg:hover path {
     fill:black;
     transition: all ease-in-out .3s ;
-}
+}*/
 
 #toggleWatchBtn {
-    width:auto;
+    width:100%;
     height:40px;
     padding:8px;
-    position:fixed;
+    position:relative;
     text-align:center;
     margin-left:50%;
     margin-right:auto;	
     transform: translate(-50%, 0);
-    bottom:20px;
-    background-color: #4f8bc6 !important;
-    background-image:linear-gradient(to bottom,#5494d3, #39648f);
-    border:2px solid white;
+    background-color: white !important;
+    background-image:linear-gradient(to bottom,white, #a8a8a8);
+    /*background-image:linear-gradient(to bottom,#ee984d, #c77f3f);*/
+    border:2px solid gray;
     border-radius: 10px;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-    transition: all ease-in-out .3s ;
+    -webkit-transition-duration: 0.2s; /* Safari */
+    transition-duration: 0.2s;
+    transition: all ease-in-out .2s ;
     font-size:1.6rem;
     color:black;
     cursor: pointer;
@@ -655,9 +690,9 @@ svg.norway-flag, svg.uk-flag {
 }
 
 #toggleWatchBtn:hover, #toggleWatchBtn:focus {
-    background-color: white !important;
+    background-color: #4F8BC6 !important;
     background-image:none;
-    border:2px solid black;
+    border:none;
 }
 
 /*mobile*/
