--- a/css/oslohavn1798.css
+++ b/css/oslohavn1798.css
@@ -8,7 +8,7 @@ html {
   font-size:62.5%; /*husk å bruk rem*/
 }
 
-body, html {height:100%;}
+body, html {height:100%; overflow:auto;}
 
 img {
     image-rendering: auto;
@@ -53,20 +53,20 @@ header {
 }
 
 .site-nav {
-    position:absolute;
+    position:fixed;
     background:rgb(241, 239, 236);
     width:260px;
     height:100vh;
-    top:100%;
+    /*top:100%;*/
     right:-260px;
-    overflow: hidden;
+    overflow-y: scroll;
     z-index:5000;
 }
 
 .site-nav ul {
     list-style:none;
     text-align:left;
-    margin-top:70px;
+    margin-top:50px;
 }
 
 .site-nav a {
@@ -74,7 +74,6 @@ header {
     padding:15px 30px;
     font-size:2.0rem;
     -webkit-tap-highlight-color:rgba(0, 0, 0, 0);
-
 }
 
 .site-nav a:hover,
@@ -84,6 +83,9 @@ header {
 
 .site-nav--open {
     right:0px;
+}
+
+.site-nav-inner {overflow:scroll; -webkit-overflow-scrolling:touch;
 }
 
 .menu-toggle {
@@ -237,7 +239,7 @@ svg.norway-flag, svg.uk-flag {
 #partnere {
     width:100%;
     height:auto;
-    position:absolute;
+    position:fixed;
     z-index:2000;
     bottom:10px;
 }
@@ -252,16 +254,14 @@ svg.norway-flag, svg.uk-flag {
     vertical-align:middle;
 }
 
-/* app-side */
-
-#logo-app {
+/*#logo-app {
     position:absolute;
     left:20px;
     top:20px;
     width:300px;
     z-index:100;
     overflow:visible;
-}
+}*/
 
 /* The Modal (background) */
 /*.modal {
@@ -436,11 +436,6 @@ svg.norway-flag, svg.uk-flag {
     to {top: -40px; opacity: 1}
 }*/
 
-#map {
-    height:100vh;
-    width:100%;
-}
-
       /*style the box*/  
       /*.gm-style .gm-style-iw {
         background-color: #4f8bc6 !important;
@@ -534,8 +529,8 @@ svg.norway-flag, svg.uk-flag {
     position:relative;
     text-align:left;
     width:500px;
-    height:60vh;
-    overflow-y:auto;
+    height:65vh;
+    overflow-y:scroll;
     overflow-x:hidden; 
     top:65px;
     left:40%;
@@ -576,6 +571,13 @@ svg.norway-flag, svg.uk-flag {
     color:black;
 }
 
+/*  app-side  */
+
+#map {
+    height:100vh;
+    width:100%;
+}
+
 /*knappemeny inne i appen*/
 #button-menu {
     width:150px;
@@ -585,8 +587,10 @@ svg.norway-flag, svg.uk-flag {
     margin-right:auto;
     left:0;
     right:0;
-    bottom:30px;
+    /*bottom:30px;*/
+    bottom:10px;
     z-index: 8000;
+    text-align:center;/*midtstille kompasset*/
 }
 
 /*Toggle overlay button*/
@@ -594,15 +598,15 @@ svg.norway-flag, svg.uk-flag {
 #ToggleOverlayBtn {
     border:none;
     position:relative;
-    transform: translateY(-100%) translateX(150px);
+    /*transform: translateY(-100%) translateX(150px);*/
     z-index:7000;
     cursor: pointer;
     background-color: white !important;
     border-radius: 20px;
     width:32px;
     height:32x;
-    left:10px;
-    bottom:4px;
+    /*left:10px;
+    bottom:4px;*/
     outline:none;
     line-height: 0;
     -webkit-transition-duration: 0.2s; /* Safari */
@@ -666,13 +670,14 @@ svg.norway-flag, svg.uk-flag {
 }*/
 
 #toggleWatchBtn {
-    width:100%;
-    height:40px;
+    /*width:100%;*/
+    /*max-height:40px;*/
     padding:8px;
     position:relative;
     text-align:center;
     margin-left:50%;
-    margin-right:auto;	
+    margin-right:auto;
+    white-space: nowrap;
     transform: translate(-50%, 0);
     background-color: white !important;
     background-image:linear-gradient(to bottom,white, #a8a8a8);
@@ -682,7 +687,7 @@ svg.norway-flag, svg.uk-flag {
     -webkit-transition-duration: 0.2s; /* Safari */
     transition-duration: 0.2s;
     transition: all ease-in-out .2s ;
-    font-size:1.6rem;
+    font-size:1.5rem;
     color:black;
     cursor: pointer;
     outline:none;
@@ -692,10 +697,17 @@ svg.norway-flag, svg.uk-flag {
 #toggleWatchBtn:hover, #toggleWatchBtn:focus {
     background-color: #4F8BC6 !important;
     background-image:none;
-    border:none;
 }
 
 /*mobile*/
+
+@media only screen and (min-width: 830px) { 
+
+    #partnere img:nth-child(12) {
+        margin-left:-4px;
+    }
+}
+
 
 @media only screen and (min-width: 630px) and (max-width: 830px) {
     #logo {
@@ -708,6 +720,22 @@ svg.norway-flag, svg.uk-flag {
         width: 400px;
         left:36%;
     }
+
+    #partnere img {
+        width:6.4%;
+    }
+
+    #partnere img:nth-child(11) {
+        min-width:0px;
+    }
+
+    #partnere img:nth-child(12) {
+        margin-left:-2px;
+    }
+
+    .noscroll {overflow:hidden !important; overflow-y:hidden !important;}
+
+    
 
 }
 
@@ -730,6 +758,8 @@ svg.norway-flag, svg.uk-flag {
     .site-nav {
         top:0%;
     }
+
+    .noscroll {overflow:hidden !important; overflow-y:hidden !important;}
 
     .site-nav--open {
         width:100%;
@@ -859,7 +889,6 @@ svg.norway-flag, svg.uk-flag {
 
 }
 
-
 @media only screen and (min-width: 630px) {
 
 .fade-up {
@@ -893,7 +922,6 @@ svg.norway-flag, svg.uk-flag {
 }
 
 #partnere img:nth-child(12) {
-    margin-left:-5px;
     margin-right:-15px;
     width:5%;
     max-height:35px;
